Initial work for admin navigation tidyup.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -6,6 +6,8 @@ include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 endif::[]
 
+// CLEANUP STARTS HERE
+
 * xref:admin-overview.adoc[Administration Guide]
 // Image Management
 ** xref:image-management.adoc[Image Management]
@@ -49,8 +51,6 @@ endif::[]
 ** xref:task-schedules.adoc[Task Schedules]
 ** xref:maintenance-windows.adoc[Maintenance Windows]
 ** xref:infra-maintenance.adoc[Infrastructure Maintenance Tasks]
-// Users
-** xref:users.adoc[Users]
 // Backing up
 ** xref:backup-restore.adoc[Backing Up and Restoring]
 ** xref:space-management.adoc[Managing Disk Space]
@@ -64,8 +64,12 @@ endif::[]
 *** xref:auditing.adoc[Auditing Packages]
 // Spacewalk Reports
 ** xref:reports.adoc[Generate Reports]
+//HERE
 // Tuning
-** xref:tuning-changelogs.adoc[Tuning Changelogs]
+** Task Schedules
+*** xref:tuning-changelogs.adoc[Tuning Changelogs]
+// Users
+** xref:users.adoc[Users]
 // Troubleshooting
 ** xref:tshoot-intro.adoc[Troubleshooting]
 *** xref:tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
