edit normal salt clients

--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -59,20 +59,20 @@ The same functionality is also available with the [systemitem]``system.changePro
 
 
 === Background Information
-The effect of this function differs between normal Salt clients  and Salt SSH push clients.
+The effect of this function differs between normal Salt clients and Salt SSH push clients.
 
 
 ==== Normal Salt Clients
 
-It schedules salt state action, which modifies master: option
-in minion configuration (susemanager.conf) to point to the new proxy.
-Then it restarts the minion.
+The function schedules a Salt state action, which modifies [literal]``master:`` setting in the [path]``susemanager.conf`` Salt client configuration file to point to the new proxy.
+Then the function restarts the Salt client.
 
-Note: changing master: by manual editing of the minion configuration has
-the same effect and is supported too.
+[NOTE]
+====
+Changing [literal]``master:`` by manually editing the [path]``susemanager.conf`` file has the same effect and is supported, too.
+====
 
-When the minion restarts and reconnects via new proxy, the server updates the proxy
-path in the database and schedules another action for refreshing channel URLs.
+When the minion restarts and reconnects via the new proxy, the server updates the proxy path in the database and schedules another action for refreshing the channel URLs.
 
 
 
