--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -13,6 +13,7 @@ Registering clients to a proxy is similar to registering them directly to the {p
 
 These sections contain information on registering Salt clients to a proxy using the {webui}, commands on the command line, or a bootstrap script.
 There is also information on registering traditional clients using a bootstrap script.
+There are also procedure how you can move clients from one {productname} Proxy to another one or to the {productname} Server.
 
 // Here starts what you can see on the server about proxy connected clients
 
@@ -78,12 +79,12 @@ When the minion restarts and reconnects via the new proxy, the server updates th
 
 ==== Salt SSH Push Clients
 
-The proxy path is updated immediately in the database and new action
-for refreshing channel URLs is scheduled.
+The function updates the proxy path immediately in the database and new action
+for refreshing the channel URLs is scheduled.
 
 
 
 == Move Clients from Proxies to the Server
 
-If you want to move any client from proxies to the server you must repeat the registration process from the beginning.
+If you want to move any Salt or traditional client from proxies to the server you must repeat the registration process from the beginning.
 
