--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -32,7 +32,7 @@ You can move Salt and Salt SSH push clients between proxies without the need to 
 
 [NOTE]
 ====
-If you want to move a traditional client between proxies or any client between chained proxies you must repeat the registration process from the beginning.
+If you want to move a traditional client between proxies you must repeat the registration process from the beginning.
 ====
 
 // Procede as follows:
