--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -43,6 +43,7 @@ If you want to move a traditional client between proxies you must repeat the reg
 
 . In the {productname} {webui}, navigate to the [guimenu]``System Details`` page for the client you want to move between proxies.
 . Navigate to the [guimenu]``Connection`` tab.
+  Then follow the [guimenu]``Change proxy`` link to see the drop-down menu.
 . From the [guimenu]``New Proxy`` drop-down menu select the proxy you want the client to move to, and click btn:[Change Proxy].
 
 
