--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -87,5 +87,7 @@ for refreshing the channel URLs is scheduled.
 
 == Move Clients from Proxies to the Server
 
-If you want to move any Salt or traditional client from proxies to the server you must repeat the registration process from the beginning.
+If you want to move a Salt client from a proxy to the server, select [literal]``None`` from proxy list.
+
+If you want to move a traditional client to the server you must repeat the registration process from the beginning.
 
