client-upgrades-major.adoc: also mention /boot/grub2/grub.cfg (#1362)
* client-upgrades-major.adoc: also mention /boot/grub/grub.cfg
* Fix SUSE-specific path for GRUB 2: /boot/grub/grub.cfg -> /boot/grub2/grub.cfg

--- a/modules/client-configuration/pages/client-upgrades-major.adoc
+++ b/modules/client-configuration/pages/client-upgrades-major.adoc
@@ -129,7 +129,7 @@ You can monitor the mirroring progress in [path]``/var/log/rhn/reposync/<channel
 
 Next time the client synchronizes with the {productname} Server, it receives a re-installation job.
 The re-installation job fetches the new kernel and initrd packages.
-It also writes a new [path]``/boot/grub/menu.lst``, containing pointers to the new kernel and initrd packages.
+It also writes a new [path]``/boot/grub/menu.lst`` (GRUB Legacy) or [path]``/boot/grub2/grub.cfg`` (GRUB 2), containing pointers to the new kernel and initrd packages.
 
 When the client next boots, it uses grub to boot the new kernel with its initrd.
 PXE booting is not used during this process.
