Admin Guide navigation tidy up (#1363)
* Initial work for admin navigation tidyup.

* Initial work for admin navigation tidyup.

* Alphabetical reordering of topics.

* Further tidy up.

* Final tidyup.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -6,67 +6,77 @@ include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 endif::[]
 
+
 * xref:admin-overview.adoc[Administration Guide]
-// Image Management
-** xref:image-management.adoc[Image Management]
-// Channel Management
+// Topics are listed in alphabetical order
+// Actions
+** xref:actions.adoc[Actions]
+// Ansible
+ifeval::[{suma-content} == true]
+** xref:ansible-integration.adoc[Ansible Integration]
+endif::[]
+// Authentication methods
+** xref:auth-methods.adoc[Authentication Methods]
+*** xref:auth-methods-sso.adoc[Authentication With SSO]
+*** xref:auth-methods-pam.adoc[Authentication With PAM]
+// Backing up
+** xref:backup-restore.adoc[Backing Up and Restoring]
+// Content staging
+** xref:content-staging.adoc[Content Staging]
+// Channel management
 ** xref:channel-management.adoc[Channel Management]
 *** xref:custom-channels.adoc[Custom Channels]
-// Patch Management
-** xref:patch-management.adoc[Patch Management]
-// Subscription Matching
-** xref:subscription-matching.adoc[Subscription Matching]
-// Live Patching
+// Content lifecycle
+** xref:content-lifecycle.adoc[Content Lifecycle Management]
+*** xref:content-lifecycle-examples.adoc[Content Lifecycle Management Examples]
+// Disconnected setup
+** xref:disconnected-setup.adoc[Disconnected Setup]
+// Disk space
+** xref:space-management.adoc[Disk Space Management]
+// Image management
+** xref:image-management.adoc[Image Management]
+// Infrastructure maintenance
+** xref:infra-maintenance.adoc[Infrastructure Maintenance Tasks]
+// ISS
+** xref:iss.adoc[Inter-Server Synchronization]
+*** xref:iss_v2.adoc[Inter-Server Synchronization version 2]
+// Live patching
 ** xref:live-patching.adoc[Live Patching]
 *** xref:live-patching-channel-setup.adoc[Channel Setup for Live Patching]
 *** xref:live-patching-sles15.adoc[Live Patching on SLES 15]
 *** xref:live-patching-sles12.adoc[Live Patching on SLES 12]
-// Monitoring
-** xref:monitoring.adoc[Monitoring]
-** xref:organizations.adoc[Organizations]
-** xref:content-staging.adoc[Content Staging]
-** xref:disconnected-setup.adoc[Disconnected Setup]
-// Content Lifecycle
-** xref:content-lifecycle.adoc[Content Lifecycle Management]
-*** xref:content-lifecycle-examples.adoc[Content Lifecycle Management Examples]
-ifeval::[{suma-content} == true]
-// Ansible integration
-** xref:ansible-integration.adoc[Ansible Integration]
-endif::[]
-// Authentication Methods
-** xref:auth-methods.adoc[Authentication Methods]
-*** xref:auth-methods-sso.adoc[Authentication With SSO]
-*** xref:auth-methods-pam.adoc[Authentication With PAM]
-// SSL Certificates
-** xref:ssl-certs.adoc[SSL Certificates]
-*** xref:ssl-certs-selfsigned.adoc[Self-Signed SSL Certificates]
-*** xref:ssl-certs-imported.adoc[Imported SSL Certificates]
-// ISS
-** xref:iss.adoc[Inter-Server Synchronization]
-*** xref:iss_v2.adoc[Inter-Server Synchronization version 2]
-// Tasks, Actions, & Maintenance Windows
-** xref:actions.adoc[Actions]
-** xref:task-schedules.adoc[Task Schedules]
+// Maintenance windows
 ** xref:maintenance-windows.adoc[Maintenance Windows]
-** xref:infra-maintenance.adoc[Infrastructure Maintenance Tasks]
-// Users
-** xref:users.adoc[Users]
-// Backing up
-** xref:backup-restore.adoc[Backing Up and Restoring]
-** xref:space-management.adoc[Managing Disk Space]
 // mgr-sync
-** xref:mgr-sync.adoc[Using mgr-sync]
+** xref:mgr-sync.adoc[mgr-sync Command]
+// Monitoring
+** xref:monitoring.adoc[Monitoring with Prometheus and Grafana]
+// Organizations
+** xref:organizations.adoc[Organizations]
+// Patch management
+** xref:patch-management.adoc[Patch Management]
+// Reports
+** xref:reports.adoc[Reports Generation]
+// Security
 ** Security
 *** xref:master-fingerprint.adoc[Master Fingerprint]
 *** xref:repo-metadata.adoc[Repository Metadata]
 *** xref:mirror-sources.adoc[Mirror Sources]
 *** xref:openscap.adoc[OpenSCAP]
 *** xref:auditing.adoc[Auditing Packages]
-// Spacewalk Reports
-** xref:reports.adoc[Generate Reports]
-// Tuning
+// SSL certificates
+** xref:ssl-certs.adoc[SSL Certificates]
+*** xref:ssl-certs-selfsigned.adoc[Self-Signed SSL Certificates]
+*** xref:ssl-certs-imported.adoc[Imported SSL Certificates]
+// Subscription matching
+** xref:subscription-matching.adoc[Subscription Matching]
+// Tasks
+** xref:task-schedules.adoc[Task Schedules]
+// Tuning changelogs
 ** xref:tuning-changelogs.adoc[Tuning Changelogs]
-// Troubleshooting
+// Users
+** xref:users.adoc[Users]
+// Troubleshooting - always keep as the last chapter
 ** xref:tshoot-intro.adoc[Troubleshooting]
 *** xref:tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
 *** xref:tshoot-diskspace.adoc[Troubleshooting Disk Space]
