Randm fixes of file names and links.

--- a/modules/administration/pages/organizations.adoc
+++ b/modules/administration/pages/organizations.adoc
@@ -84,7 +84,7 @@ For more information about OpenSCAP, see xref:reference:audit/audit-openscap-ove
 Navigate to the [guimenu]``States`` tab to manage Salt states for all clients in your organization.
 States allow you to define global security policies, or add a common admin user to all clients.
 
-For more information about Salt States, see xref:salt:salt-states.adoc[].
+For more information about Salt States, see xref:specialized-guides:salt/salt-states-and-pillars.adoc[].
 
 
 
