--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -28,7 +28,7 @@ If this occurs, OSAD clients cannot contact the SUSE Manager Server, and jabberd
 ====
 This fix is only required if you have more than 8192 clients connected using OSAD.
 In this case, we recommend you consider using Salt clients instead.
-For more information about tuning large scale installations, see xref:salt:large-scale.adoc[].
+For more information about tuning large scale installations, see xref:specialized-guides:salt/salt-scaling-minions.adoc[].
 ====
 
 You can increase the number of files available to jabber by editing the jabberd local configuration file.
