--- a/modules/client-configuration/pages/contact-methods-saltssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh.adoc
@@ -10,7 +10,7 @@ The Push via Salt SSH method creates an encrypted tunnel from the {productname} 
 After all actions and events are executed, the tunnel is closed.
 
 The server uses the [command]``salt-ssh`` tool to contact the clients at regular intervals, checking in and performing scheduled actions and events.
-For more information about Salt SSH, see xref:salt:salt-ssh.adoc[].
+For more information about Salt SSH, see xref:specialized-guides:salt/salt-ssh.adoc[].
 
 This contact method works for Salt clients only.
 For traditional clients, use Push via SSH.
