--- a/modules/reference/pages/salt/salt-menu.adoc
+++ b/modules/reference/pages/salt/salt-menu.adoc
@@ -4,4 +4,4 @@
 The [guimenu]``Salt`` section displays details of your Salt clients.
 You can use this menu to perform remote commands or define a state catalog for your Salt clients.
 
-For more information about using Salt with {productname}, see xref:salt:salt-overview.adoc[].
+For more information about using Salt with {productname}, see xref:specialized-guides:salt/salt-overview.adoc[].
