--- a/modules/reference/pages/systems/system-details/sd-states.adoc
+++ b/modules/reference/pages/systems/system-details/sd-states.adoc
@@ -6,7 +6,7 @@ States provide configuration templates for Salt clients.
 Applying the highstate applies all outstanding Salt states.
 This is only available for Salt clients.
 
-For more information about Salt states, see xref:salt:salt-states.adoc[].
+For more information about Salt states, see xref:specialized-guides:salt/salt-states-and-pillars.adoc[].
 
 The menu:Systems[States] subtab is split into sections:
 
