--- a/modules/reference/pages/salt/salt-formula-catalog.adoc
+++ b/modules/reference/pages/salt/salt-formula-catalog.adoc
@@ -4,4 +4,4 @@
 The menu:Salt[Formula Catalog] section allows you to see which formulas are currently installed on your {productname} Server, and are available to be used on your Salt clients.
 Install and configure formulas by navigating to menu:Systems[Details] for the client you want to configure, and navigate to the guimenu``Formulas`` tab.
 
-For more information about {productname} formulas, see xref:salt:formulas-intro.adoc[].
+For more information about {productname} formulas, see xref:specialized-guides:salt/salt-formulas-intro.adoc[].
