--- a/modules/installation-and-upgrade/pages/db-intro.adoc
+++ b/modules/installation-and-upgrade/pages/db-intro.adoc
@@ -32,7 +32,7 @@ This table shows the PostgreSQL version required for each version of {productnam
 
 | {productname} 4.3.0
 | SLES 15 SP4
-| Postgres 14
+| PostgreSQL 14
 
 |===
 endif::[]
