Introduce postgresql 14 with SUMA 4.3 and drop SUMA 4.0 description (#1370)
* Introduce postgresql 14 with SUMA 4.3 and drop SUMA 4.0 description.

* Update modules/installation-and-upgrade/pages/db-intro.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/installation-and-upgrade/pages/db-intro.adoc
+++ b/modules/installation-and-upgrade/pages/db-intro.adoc
@@ -30,6 +30,10 @@ This table shows the PostgreSQL version required for each version of {productnam
 | SLES 15 SP3
 | Postgres 13
 
+| {productname} 4.3.0
+| SLES 15 SP4
+| PostgreSQL 14
+
 |===
 endif::[]
 
@@ -52,6 +56,8 @@ This table shows the PostgreSQL version required for each version of {productnam
 | {productname} >= 2021.06
 | {opensuse} 15.3
 | PostgreSQL 13
+
+// TODO: add opensuse 15.4 with postgresql 14 when we know the uyuni version
 
 |===
 endif::[]
