Added instruction (old PR moved to new book).

--- a/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
@@ -19,6 +19,8 @@ Performing a minor upgrade is similar to installing operating system package upd
 By default, several update repositories are configured and enabled for the {productname} Server.
 New and updated packages become available automatically.
 
+It is recommended you make a backup of the server before upgrading.
+
 . On the {productname} Server, at the command prompt, as root, stop the spacewalk services:
 +
 
