--- a/modules/installation-and-upgrade/pages/server-z.adoc
+++ b/modules/installation-and-upgrade/pages/server-z.adoc
@@ -16,6 +16,8 @@ Then you can upgrade the database schema.
 By default, several update channels are configured and enabled for the {productname} Server.
 New and updated packages will become available automatically.
 
+It is recommended you make a backup of the server before upgrading.
+
 . On the {productname} Server, at the command prompt, as root, stop the spacewalk services:
 +
 
