Outstanding changes for Uyuni upgrade (from the old PR).

--- a/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
@@ -37,24 +37,21 @@ zypper ref
 ----
 +
 
-. List available patches:
+// Zypper list-patches or patch doesn't update Uyuni
+. Update new packages: (Repeat this if prompted by zypper)
 +
 
 ----
-zypper list-patches
+zypper up 
 ----
 +
 
-. Apply all available patches:
+. If zypper reports that the Uyuni package won't be upgraded, run the command manually:
 +
 
 ----
-zypper patch
+zypper install Uyuni-Server-Release
 ----
-+
-
-This command only applies patches.
-To apply all outstanding updates, use [command]``zypper up`` instead.
 +
 
 . Restart the spacewalk services:
