removed references to caasp

--- a/modules/client-configuration/pages/vhm-kubernetes.adoc
+++ b/modules/client-configuration/pages/vhm-kubernetes.adoc
@@ -12,9 +12,9 @@ To use {productname} with {kube}, you will need to have your {productname} Serve
 
 You also require:
 
-* At least one {kube} or {caasp} cluster available on your network.
+* At least one {kube} cluster available on your network.
 * The [systemitem]``virtual-host-gatherer-Kubernetes`` package installed on the {productname} Server.
-* {kube} version 1.5.0 or higher, or {caasp}.
+* {kube} version 1.5.0 or higher.
 * Docker version 1.12 or higher on the container build host.
 
 
@@ -25,8 +25,6 @@ You also require:
 
 You will need a ``kubeconfig`` file to register and authorize your {kube} cluster.
 You can get a ``kubeconfig`` file using the {kube} command line tool ``kubectl``.
-
-If you are using {caasp}, you can download the file from the Velum interface.
 
 
 
