--- a/modules/client-configuration/pages/vhm.adoc
+++ b/modules/client-configuration/pages/vhm.adoc
@@ -8,7 +8,7 @@ With your virtualized clients organized this way, Taskomatic collects data on th
 VHMs also allow you to use subscription matching on your virtualized clients.
 
 You can create a VHM on your {productname} Server, and use it to inventory available public cloud instances.
-You can also use a VHM to manage clusters created with {kube} and {caasp}.
+You can also use a VHM to manage clusters created with {kube}.
 
 // We could probably use a diagram here, to convey the meaning behind this:
 // Virtual Host Managers (VHMs) can be used to manage one or more virtual hosts.
@@ -18,7 +18,6 @@ You can also use a VHM to manage clusters created with {kube} and {caasp}.
 
 * For more information on using a VHM with Amazon Web Services, see xref:client-configuration:vhm-aws.adoc[].
 * For more information on using a VHM with Microsoft Azure, see xref:client-configuration:vhm-azure.adoc[].
-* For more information on using a VHM with {caasp}, see xref:client-configuration:vhm-caasp.adoc[].
 * For more information on using a VHM with Google Compute Engine, see xref:client-configuration:vhm-gce.adoc[].
 * For more information on using a VHM with {kube}, see xref:client-configuration:vhm-kubernetes.adoc[].
 * For more information on using a VHM with Nutanix, see xref:client-configuration:vhm-nutanix.adoc[].
