--- a/modules/specialized-guides/pages/salt/salt-formulas-custom.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formulas-custom.adoc
@@ -14,7 +14,7 @@ RPM-based formulas must be placed in a specific directory structure to ensure th
 A formula contains two separate directories: [path]``states``, and [path]``metadata``.
 Folders in these directories need to have exactly matching names.
 
-Based on the operating system, the placeholder <serving directory> needs to be replaced to [path]``/srv`` for SUSE based systems or [path]``/var`` for Red Hat based systems.
+Based on the operating system, the placeholder <serving directory> should be replaced with [path]``/srv`` for SUSE based systems or [path]``/var`` for Red Hat based systems.
 
 The formula states directory contains anything necessary for a Salt state to work independently.
 This includes [path]``.sls`` files, a [path]``map.jinja`` file and any other required files.
