--- a/modules/specialized-guides/pages/salt/salt-formulas-custom.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formulas-custom.adoc
@@ -35,7 +35,7 @@ For example, the [package]``locale-formula`` metadata directory is located in:
 If you have a custom formula that is not in an RPM, it must be in a state directory configured as a Salt file root.
 Custom state formula data must be in:
 ----
-<serving directory>/salt/<custom-formula-name>/
+/<serving directory>/salt/<custom-formula-name>/
 ----
 
 Custom metadata information must be in:
