--- a/modules/specialized-guides/pages/salt/salt-formulas-custom.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formulas-custom.adoc
@@ -40,7 +40,7 @@ Custom state formula data must be in:
 
 Custom metadata information must be in:
 ----
-<serving directory>/formula_metadata/<custom-formula-name>/
+/<serving directory>/formula_metadata/<custom-formula-name>/
 ----
 
 All custom folders must contain a [path]``form.yml`` file.
