--- a/modules/specialized-guides/pages/salt/salt-formulas-custom.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formulas-custom.adoc
@@ -46,7 +46,7 @@ Custom metadata information must be in:
 All custom folders must contain a [path]``form.yml`` file.
 These files are detected as form recipes and are applied to groups and systems from the {webui}:
 ----
-<serving directory>/formula_metadata/<custom-formula-name>/form.yml
+/<serving directory>/formula_metadata/<custom-formula-name>/form.yml
 ----
 
 [NOTE]
