Modified OS specific parts (#1361)
* Modified OS specific parts with Salt formulas
Co-authored-by: Karl Eichwalder <ke@suse.de>
* Update modules/specialized-guides/pages/salt/salt-formulas-custom.adoc

--- a/modules/salt/pages/formulas-custom.adoc
+++ b/modules/salt/pages/formulas-custom.adoc
@@ -14,6 +14,8 @@ RPM-based formulas must be placed in a specific directory structure to ensure th
 A formula contains two separate directories: [path]``states``, and [path]``metadata``.
 Folders in these directories need to have exactly matching names.
 
+Based on the operating system, the placeholder [literal]``<serving directory>`` should be replaced with [path]``srv`` for SUSE based systems or [path]``var`` for Red Hat based systems.
+
 The formula states directory contains anything necessary for a Salt state to work independently.
 This includes [path]``.sls`` files, a [path]``map.jinja`` file and any other required files.
 This directory should only be modified by RPMs and should not be edited manually.
@@ -33,18 +35,18 @@ For example, the [package]``locale-formula`` metadata directory is located in:
 If you have a custom formula that is not in an RPM, it must be in a state directory configured as a Salt file root.
 Custom state formula data must be in:
 ----
-/srv/salt/<custom-formula-name>/
+/<serving directory>/salt/<custom-formula-name>/
 ----
 
 Custom metadata information must be in:
 ----
-/srv/formula_metadata/<custom-formula-name>/
+/<serving directory>/formula_metadata/<custom-formula-name>/
 ----
 
 All custom folders must contain a [path]``form.yml`` file.
 These files are detected as form recipes and are applied to groups and systems from the {webui}:
 ----
-/srv/formula_metadata/<custom-formula-name>/form.yml
+/<serving directory>/formula_metadata/<custom-formula-name>/form.yml
 ----
 
 [NOTE]
