start with adjusting according to our TS template

--- a/modules/administration/pages/tshoot-custom-channel.adoc
+++ b/modules/administration/pages/tshoot-custom-channel.adoc
@@ -1,39 +1,60 @@
+[[troubleshooting-customchannel]]
+= Creating Custom Channel without Conflicting Packages
 
-EPEL or any other custom channel containing conflicting packages is
-created as a child channel within a parent channel (e.g. RHEL8). As a
-result, the when bootstrap repository is being created, conflicting
-packages with higher version could be included into the repo. Such
-packages (e.g. python3-zmq, zeromq) may corrupt creation of bootstrap
-repository or cause issues during bootstrap of the client.
+////
+PUT THIS COMMENT AT THE TOP OF TROUBLESHOOTING SECTIONS
 
-When the custom channel (e.g. EPEL channel) is added below the parent
-channel, issues with conflicting packages can not be solved
-directly. The way how to solve this is to separate the custom channel
-from the parent channel. The custom channel needs to be created in a
-separate tree. In case that the custom channel needs to be delivered
-as a child, such environemnt can be created using CLM. Sources in a
-CLM project can be added there from different trees. Using such
-approach, the custom channel stays below parent within built
-environment, however, vendor channel tree stay without custom channel
-and the bootstrap repo and onboarding of clients works correctly.
+Troubleshooting format:
 
-There is already a feature in development which helps to avoid the
-issue (Salt Bundle), however, it still takes some time (months) to get
-the feature into production environment.
+One sentence each:
+Cause: What created the problem?
+Consequence: What does the user see when this happens?
+Fix: What can the user do to fix this problem?
+Result: What happens after the user has completed the fix?
+
+If more detailed instructions are required, put them in a "Resolving" procedure:
+.Procedure: Resolving Widget Wobbles
+. First step
+. Another step
+. Last step
+////
+
+////
+Cause: Conflicting packages in custom channel
+Consequence: Creating bootstrap repo can fail
+Fix: Separate trees from each other
+Result: Clean and functional boostrap repo will be created
+////
+
+When setting up a custom channel with conflicting packages features such as creating a bootstrap repository can result in undefined behavior and make registering clients fail.
+
+For example, conflicting packages with higher version numbers could be
+included into the bootstrap repository.
+Such packages (for example, [package]``python3-zmq`` or [package]``zeromq``) may corrupt the creation of the bootstrap repository or cause issues during bootstrap of the client.
+
+When the custom channel (for example, an EPEL channel) is added below the parent channel, issues with conflicting packages can not be solved directly.
+The way how to solve this is to separate the custom channel from the parent channel.
+The custom channel needs to be created in a separate tree.
+In case that the custom channel needs to be delivered
+as a child, such environemnt can be created using Content Lifecycle Management (CLM).
+Sources in a CLM project can be added there from different trees.
+Using such an approach, the custom channel stays below the parent within the built environment.
+However, the vendor channel tree stays without the custom channel and the bootstrap repository.
+Then registering clients works correctly.
 
 When the custom channel with the conflicting packages (salt, zeromq,
-and so on) is created as a child channel, following steps may help to
-resolve the issue:
+and so on) is created as a child channel, following steps can help to
+avoid the issue:
 
-1. Remove the custom channel as a child channel from parent
+.Procedure: Avoiding Conflicting Packages in Custom Channels
+
+. Remove the custom channel as a child channel from parent
 channel. More details:
 https://documentation.suse.com/suma/4.2/en/suse-manager/administration/custom-channels.html#_manage_custom_channels
-
-2. Custom channel needs to be created in a separate tree. More
+. Custom channel needs to be created in a separate tree. More
 details:
 https://documentation.suse.com/suma/4.2/en/suse-manager/administration/custom-channels.html#_creating_custom_channels_and_repositories
-
-3. In order to get the custom channel as a child channel within
+. In order to get the custom channel as a child channel within
 Content Lifecycle management:
 
 => In SUSE Manager webUI -> Content Lifecycle -> Create Project -> put in "Name" and "Label"
