--- a/modules/administration/pages/tshoot-custom-channel.adoc
+++ b/modules/administration/pages/tshoot-custom-channel.adoc
@@ -48,33 +48,27 @@ avoid the issue:
 
 .Procedure: Avoiding Conflicting Packages in Custom Channels
 
-. Remove the custom channel as a child channel from parent
-channel. More details:
-https://documentation.suse.com/suma/4.2/en/suse-manager/administration/custom-channels.html#_manage_custom_channels
-. Custom channel needs to be created in a separate tree. More
-details:
-https://documentation.suse.com/suma/4.2/en/suse-manager/administration/custom-channels.html#_creating_custom_channels_and_repositories
-. In order to get the custom channel as a child channel within
-Content Lifecycle management:
-
-=> In SUSE Manager webUI -> Content Lifecycle -> Create Project -> put in "Name" and "Label"
-=> Attach Source to the project -> use needed vendor channels + custom channel => (sharing example using CentOS8)
-=> Add environment into the Project -> example using CentOS8
-=> Build the environment environnment by hitting the "Build" button -> it creates an environment (with vendor and custom channels) which can be associated with Activation key and used to bootstrap the client
-
-4. Important note: in the CLM project, it is recommend to add a filter
+. Remove the custom channel as a child channel from parent channel.
+  For more information, see xref:administration:custom-channels#_manage_custom_channels[].
+. Create the custom channel in a separate tree.
+  For more information, see xref:administration:custom-channels#_creating_custom_channels_and_repositories[].
+. To get the custom channel as a child channel within
+Content Lifecycle Management (CLM):
++
+* In SUSE Manager webUI -> Content Lifecycle -> Create Project -> put in "Name" and "Label"
+* Attach Source to the project -> use needed vendor channels + custom channel => (sharing example using CentOS8)
+* Add environment into the Project -> example using CentOS8
+* Build the environment environnment by hitting the "Build" button -> it creates an environment (with vendor and custom channels) which can be associated with Activation key and used to bootstrap the client
+. Important note: in the CLM project, it is recommend to add a filter
 which filters out (exclude) the problematic/conflicting packages. The
 reason for that is that the conflicting packages with higher version
 would be installed anyway during the update of the client. More detail
 about filtering:
 https://documentation.suse.com/suma/4.2/en/suse-manager/administration/content-lifecycle-examples.html#exclude-higher-kernel-version
-
-5. In order to get the latest patches into CLM environment (with
+. In order to get the latest patches into CLM environment (with
 vendor and custom channel), it is needed to re-built the environment
 by clicking on "Build" button in the project
-
-6. More details about CLM can be found in:
+. More details about CLM can be found in:
 https://documentation.suse.com/suma/4.2/en/suse-manager/administration/content-lifecycle.html
-
-7. There is another workaround described in release notes:
+. There is another workaround described in release notes:
 https://www.suse.com/releasenotes/x86_64/SUSE-MANAGER/4.2/index.html#_epel_and_salt_packages
