--- a/modules/installation-and-upgrade/pages/setup-payg.adoc
+++ b/modules/installation-and-upgrade/pages/setup-payg.adoc
@@ -4,12 +4,15 @@
 In the three major public cloud providers (AWS, GCP and Azure), SUSE:
 
 * provides customized Pay-as-you-go-specific product images (eg. SLES, SLES for SAP...)
-* operates per-region RMT Servers mirroring repositories for products available as Pay-as-you-go
+* operates per-region RMT Servers mirroring repositories for products available as {payg}
+
+{payg} instances are registered to the closest RMT Server at launch time (region/Server name is auto-determined)
+
 
 This document describes how to set up {payg} instance to {productname} server, and what happens in case instance is no longer available or accessible.
 
 
-//OM: It is also possible to set up PAYG using XML RPC, but we don't have that procedure desribed 
+//OM: It is also possible to set up PAYG using XML RPC, but we don't have that procedure desribed yet
 
 
 == Setting up {payg} 
@@ -26,6 +29,11 @@ This document describes how to set up {payg} instance to {productname} server, a
 . In the menu:Add new {payg} data[Password], enter... (Ricardo?)
 . In the menu:Add new {payg} data[Key], add the correct instance key
 . In the menu:Add new {payg} data[Key Password], add ... (Ricardo?)
+
+[IMPORTANT]
+====
+Authentication keys must always be in PEM format.
+====
 
 If you are not connecting directly to the Cloud, but via SSH bastion, proceed with <<proc-adding-ssh-bastion-connection-data>>.
 
@@ -56,10 +64,11 @@ If the invalid data are entered at any point, the newly created instance will be
 ====
 
 
-As soon as the authentication data is available on the server, a list of available products is updated. 
+As soon as the authentication data is available on the server, a list of available products is updated.
+Available products are all versions of the same product family and architecture as the one installed in the {payg} instance. 
 [guimenu]``Admin > Setup Wizard > Products`` screen shows a full family of products that are associated with the new instance. 
 
-Once the products are shown as available, they can be synced by ticking the checkbox next to the product name and then btn:[Add product].
+Once the products are shown as available, they need to be scheduled for syncing synced by selcting the checkbox next to the product name and then btn:[Add product].
 For more information how to add products for syncing, see... existing OLD link here....
 
 
