--- a/modules/administration/pages/tshoot-custom-channel.adoc
+++ b/modules/administration/pages/tshoot-custom-channel.adoc
@@ -55,20 +55,18 @@ avoid the issue:
 . To get the custom channel as a child channel within
 Content Lifecycle Management (CLM):
 +
-* In SUSE Manager webUI -> Content Lifecycle -> Create Project -> put in "Name" and "Label"
-* Attach Source to the project -> use needed vendor channels + custom channel => (sharing example using CentOS8)
-* Add environment into the Project -> example using CentOS8
-* Build the environment environnment by hitting the "Build" button -> it creates an environment (with vendor and custom channels) which can be associated with Activation key and used to bootstrap the client
-. Important note: in the CLM project, it is recommend to add a filter
-which filters out (exclude) the problematic/conflicting packages. The
-reason for that is that the conflicting packages with higher version
-would be installed anyway during the update of the client. More detail
-about filtering:
-https://documentation.suse.com/suma/4.2/en/suse-manager/administration/content-lifecycle-examples.html#exclude-higher-kernel-version
-. In order to get the latest patches into CLM environment (with
-vendor and custom channel), it is needed to re-built the environment
-by clicking on "Build" button in the project
-. More details about CLM can be found in:
-https://documentation.suse.com/suma/4.2/en/suse-manager/administration/content-lifecycle.html
-. There is another workaround described in release notes:
-https://www.suse.com/releasenotes/x86_64/SUSE-MANAGER/4.2/index.html#_epel_and_salt_packages
+* In the {productname} {webui}, navigate to menu:Content Lifecycle[], and click btn:[Create Project].
+  Enter [guimenu]``Name`` and [guimenu]``Label``.
+* Attach Source to the project.
+  Use the needed vendor channels and the custom channel.  // (sharing example using CentOS8)
+* Add environment into the Project.  // example using CentOS8
+* To build the environment click the btn:[Build] button.
+  This creates an environment with vendor and custom channels that can be associated with an activation key and used to bootstrap the client.
+. Important note: In the CLM project, it is recommend to add a filter, which excludes the problematic or conflicting packages.
+  Otherwise the conflicting packages with higher version numbers would be installed during the update of the client.
+  For more information about filtering, see xref:administration:content-lifecycle-examples#exclude-higher-kernel-version[].
+. To get the latest patches into the CLM environment (with vendor and custom channel), click the btn:[Build] button in the project.
+  This is needed to re-built the environment.
+
+* For more information about CLM, see xref:administration:content-lifecycle[].
+* For another workaround, see https://www.suse.com/releasenotes/x86_64/SUSE-MANAGER/4.2/index.html#_epel_and_salt_packages.
