--- a/modules/installation-and-upgrade/pages/setup-payg.adoc
+++ b/modules/installation-and-upgrade/pages/setup-payg.adoc
@@ -6,11 +6,9 @@ In the three major public cloud providers (AWS, GCP and Azure), SUSE:
 * provides customized Pay-as-you-go-specific product images (eg. SLES, SLES for SAP...)
 * operates per-region RMT Servers mirroring repositories for products available as {payg}
 
-{payg} instances are registered to the closest RMT Server at launch time (region/Server name is auto-determined)
+//{payg} instances are registered to the closest RMT Server at launch time (region/Server name is auto-determined).
 
-
-This document describes how to set up {payg} instance to {productname} server, and what happens in case instance is no longer available or accessible.
-
+This document describes how to set up {payg} instance on {productname} server, and what happens in case instance is no longer available or accessible from the server.
 
 //OM: It is also possible to set up PAYG using XML RPC, but we don't have that procedure desribed yet
 
@@ -20,9 +18,9 @@ This document describes how to set up {payg} instance to {productname} server, a
 [[proc-setting-up-new-payg]]
 .Procedure: Setting up new {payg}  instance
 [role=procedure]
-. In the [guimenu]``Admin > Setup Wizard > {payg}`` click btn:[{payg}].
+. In the [guimenu]``Admin > Setup Wizard > {payg}`` click btn:[Add {payg}].
 . In the new screen, click btn:[Create] to add new {payg} connection data
-. In the menu:Add new {payg} data[Description], add the description of the newly created connecton.
+. In the menu:Add new {payg} data[Description], add the description of the newly created connection.
 . In the menu:Add new {payg} data[Hostname], enter the actual name of the instance as it appears on the Cloud.
 . In the menu:Add new {payg} data[Port], enter 22.
 . In the menu:Add new {payg} data[Username], add the actual username as specified in the Cloud (Ricardo?)
@@ -47,35 +45,35 @@ Otherwise, continue with <<proc-finishing-payg-setting-up>>.
 . In the menu:Add new {payg} data[Bastion Username], add bastion the username
 . In the menu:Add new {payg} data[Bastion Password], add bastion password
 . In the menu:Add new {payg} data[Bastion Key], add bastion key
-. In the menu:Add new {payg} data[Bastion Key Password], add bastion key passoword
+. In the menu:Add new {payg} data[Bastion Key Password], add bastion key password
 
 Complete the setup process with with <<proc-finishing-payg-setting-up>>.
 
 [[proc-finishing-payg-setting-up]]
 .Procedure: Finishing {payg} setting up
 [role=procedure]
-. Click btn:[Create].
+. Click btn:[Create] to complete adding new {payg} connection data
 . You will return to [guimenu]``Admin > Setup Wizard > Pay-as-you-go`` screen.
-. If all of the entered authentication data for the instance are correct, the column Status will soon show "Credentials succesfully updated".
+. If all of the entered authentication data for the instance are correct, the column Status will soon show "Credentials successfully updated".
 
 [IMPORTANT]
 ====
-If the invalid data are entered at any point, the newly created instance will be shown in Setup Wizard > PAYG, with the status displaying Error message.
+If the invalid data are entered at any point, the newly created instance will be shown in Setup Wizard > PAYG, with column Status displaying Error message.
 ====
 
 
 As soon as the authentication data is available on the server, a list of available products is updated.
 Available products are all versions of the same product family and architecture as the one installed in the {payg} instance. 
-[guimenu]``Admin > Setup Wizard > Products`` screen shows a full family of products that are associated with the new instance. 
+E.g. if the instance has {sle} 15 SP1 product installed, {sle}15 SP2 and {sle}15 SP3 will be automatically added and shown in [guimenu]``Admin > Setup Wizard > Products``. 
 
-Once the products are shown as available, they need to be scheduled for syncing synced by selcting the checkbox next to the product name and then btn:[Add product].
-For more information how to add products for syncing, see... existing OLD link here....
+Once the products are shown as available, they need to be scheduled for syncing by selecting the checkbox next to the product name and clicking btn:[Add product].
 
+To monitor the progress of channel syncing in GUI, go to [guimenu]``Software > Channel List > All``. 
 
-To see the progress of channel syncing in GUI, go to [guimenu]``Software > Channel List > All`` to find that the new channel has been added to the list. 
 To monitor the syncing progress in the log files, go to /var/log/rhn/reposync directory on (Ricardo - which server?)
 
 
+=== Deleting the instance
 
 The following procedure describes how to delete the instance.
 
@@ -95,7 +93,7 @@ The following procedure describes how to delete the instance.
 Instance status is refreshed every 10 minutes and is shown in the column Status (...or else WHERE too).
 
 {payg} instances remain registered on {productname} server regardless of their status on the Cloud. << CHECK with Ricardo
-The connection is refreshed by taskomatic and always uses the last known authentication credentials to acces the instance.
+The connection is refreshed by taskomatic and always uses the last known authentication credentials to access the instance.
 When the instance is not reachable, the reposync will fail.
 
 
@@ -104,7 +102,7 @@ There are a number of reasons why instance may not be accessible from the {produ
 . If the instance exists, but is stopped, the last known credentials will be used to try to connect to that instance. 
     The availability of these credentials will vary depending on the cloud provider.
 
-. If the instance no longer exists, but is still registered with SUMA, the authantification will fail.
+. If the instance no longer exists, but is still registered with SUMA, the authentification will fail.
     The error message is shown in the column status. 
     (The level of detail the error message displays varies << RICARDO, let's check this?)
 +
