Added reference link to Cloud quickstart book.

--- a/modules/installation-and-upgrade/pages/setup-payg.adoc
+++ b/modules/installation-and-upgrade/pages/setup-payg.adoc
@@ -21,9 +21,9 @@ This document describes how to set up {payg} instance on {productname} server, a
 . In the [guimenu]``Admin > Setup Wizard > {payg}`` click btn:[Add {payg}].
 . In the new screen, click btn:[Create] to add new {payg} connection data
 . In the menu:Add new {payg} data[Description], add the description of the newly created connection.
-. In the menu:Add new {payg} data[Hostname], enter the actual name of the instance as it appears on the Cloud.
+. In the menu:Add new {payg} data[Hostname], enter the actual name of the instance as it appears on the cloud.
 . In the menu:Add new {payg} data[Port], enter 22.
-. In the menu:Add new {payg} data[Username], add the actual username as specified in the Cloud (Ricardo?)
+. In the menu:Add new {payg} data[Username], add the actual username as specified in the cloud (Ricardo?)
 . In the menu:Add new {payg} data[Password], enter... (Ricardo?)
 . In the menu:Add new {payg} data[Key], add the correct instance key
 . In the menu:Add new {payg} data[Key Password], add ... (Ricardo?)
@@ -33,7 +33,7 @@ This document describes how to set up {payg} instance on {productname} server, a
 Authentication keys must always be in PEM format.
 ====
 
-If you are not connecting directly to the Cloud, but via SSH bastion, proceed with <<proc-adding-ssh-bastion-connection-data>>.
+If you are not connecting directly to the cloud, but via SSH bastion, proceed with <<proc-adding-ssh-bastion-connection-data>>.
 
 Otherwise, continue with <<proc-finishing-payg-setting-up>>.
 
@@ -92,7 +92,7 @@ The following procedure describes how to delete the instance.
 
 Instance status is refreshed every 10 minutes and is shown in the column Status (...or else WHERE too).
 
-{payg} instances remain registered on {productname} server regardless of their status on the Cloud. << CHECK with Ricardo
+{payg} instances remain registered on {productname} server regardless of their status on the cloud. << CHECK with Ricardo
 The connection is refreshed by taskomatic and always uses the last known authentication credentials to access the instance.
 When the instance is not reachable, the reposync will fail.
 
@@ -102,12 +102,12 @@ There are a number of reasons why instance may not be accessible from the {produ
 . If the instance exists, but is stopped, the last known credentials will be used to try to connect to that instance. 
     The availability of these credentials will vary depending on the cloud provider.
 
-. If the instance no longer exists, but is still registered with SUMA, the authentification will fail.
+. If the instance no longer exists, but is still registered with SUMA, the authentication will fail.
     The error message is shown in the column status. 
     (The level of detail the error message displays varies << RICARDO, let's check this?)
 +
 [WARNING]
 ====
 The error message shown to the user only indicates that the instance is not available. 
-Further diagnostics about the status of the instance needs to be done on the Cloud. 
+Further diagnostics about the status of the instance needs to be done on the cloud. 
 ====
